// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolbar: should be able to select Bold on toolbar for comment editor 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "type": "strong",
            },
          ],
          "text": "helloworld",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`Toolbar: should be able to select Bold on toolbar for fullpage editor 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "type": "strong",
            },
          ],
          "text": "helloworld",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`Toolbar: should be able to select normal text style for comment editor 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "helloworld",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`Toolbar: should be able to select normal text style for fullpage editor 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "helloworld",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;
